v.3.6.3

- Added Weapon Ammo to Weapon Smith level 3 Villagers.
- Added Argent Tools to Tool Smith Level 3 Villagers.
- Added E1M! Blocks to Mason Level 3 Villagers.